# python_thing

./: README.md  date.py  pyproject.toml
.github/: python-app.yml
.github/workflows/: nightly.yml  python-app.yml  python-publish.yml
tests/: example_test.py
