[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_truher"
version = "0.0.1"
authors = [{name="Joel", email="joel@truher.org"}]
description = "how to build and publish"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/truher/python_thing"
Issues = "https://github.com/truher/python_thing/issues"