# Uses the contents of version.txt as the version.

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_truher"
dynamic = ["version"]
authors = [{name="Joel", email="joel@truher.org"}]
description = "how to build and publish"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/truher/python_thing"
Issues = "https://github.com/truher/python_thing/issues"

[tool.setuptools.dynamic]
version = {file = ["version.txt"]}

[tool.setuptools]
packages = ["example_package_truher"]